--- a/hiera.yaml
+++ b/hiera.yaml
@@ -2,8 +2,8 @@
 version: 5
 
 defaults:
-  datadir: "data"
-
+  datadir: "/etc/puppetlabs/code/environments/%{environment}/data"
+  
 hierarchy:
   - name: 'Yaml backend'
     data_hash: yaml_data
