--- a/hiera.yaml
+++ b/hiera.yaml
@@ -3,10 +3,16 @@ version: 5
 
 defaults:
   datadir: "/etc/puppetlabs/code/environments/%{environment}/data"
-  
+
+backends:
+ - yaml
+yaml:
+ datadir: "/etc/puppetlabs/code/environments/%{environment}/data"
+
 hierarchy:
   - name: 'Yaml backend'
     data_hash: yaml_data
     paths:
       - "nodes/%{trusted.certname}.yaml"
       - 'common.yaml'
+ 
